tests/snapshots/wrapper_snapshots__errors__duplicate_capture_positional_then_flag.snap
---
source: tests/wrapper_snapshots.rs
expression: "render_error(r#\"(wrapper \"x\" (positional \"a\" :command+args) (flag \"--\" :command+args))\"#)"
---
  × wrapper has more than one capture keyword
   ╭─[<test>:1:45]
 1 │ (wrapper "x" (positional "a" :command+args) (flag "--" :command+args))
   ·                                             ────────────┬────────────
   ·                                                         ╰── here
   ╰────
