tests/snapshots/wrapper_snapshots__errors__list_as_command.snap
---
source: tests/wrapper_snapshots.rs
expression: "render_error(r#\"(wrapper (foo \"bar\") :command+args)\"#)"
---
  × wrapper command must be a string
   ╭─[<test>:1:10]
 1 │ (wrapper (foo "bar") :command+args)
   ·          ─────┬─────
   ·               ╰── here
   ╰────
