tests/snapshots/wrapper_snapshots__errors__missing_command.snap
---
source: tests/wrapper_snapshots.rs
expression: "render_error(\"(wrapper)\")"
---
  × wrapper must have a command name
   ╭─[<test>:1:1]
 1 │ (wrapper)
   · ────┬────
   ·     ╰── here
   ╰────
